# meraki-dashboard-ha

./: .codacy.yaml  .cursorrules  .devcontainer.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .safety-project.ini  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PYTHON_STYLE_GUIDE.md  README.md  hacs.json  mkdocs.yml  package.json  potentialfutures.txt  pyproject.toml  pytest.ini  refactor.txt  release-notes.md  release-please-config.json  renovate.json  requirements-docs.txt  requirements.txt  requirements_test.txt  setup.cfg  todos-final.txt  wrangler.toml  zensical.toml
.codacy/: configure-codacy-summary.json
.cursor/rules/: api-guidelines.mdc  code-style.mdc  common-patterns.mdc  project-overview.mdc  testing.mdc
.github/: dependabot.yml  issue-labeler.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/actions/report-drift/: action.yml
.github/actions/resolve-drift/: action.yml
.github/workflows/: api-drift.yml  bandit.yml  claude-code-review.yml  claude.yml  cleanup-draft-releases.yml  codeql.yml  create-release.yml  dependabot-prs.yml  dependency-review.yml  generate-release-notes.yml  greetings.yml  hacs.yml  hassfest.yml  issue-labeler.yml  issue-triage.yml  jekyll-gh-pages.yml  manual-changelog-update.yml  ossar.yml  pages.yml  pr-labeler.yml  release-assets.yml  release-drafter.yml  release-please.yml  release.yml  scorecard.yml  sdk-version.yml  stale.yml  summary.yml  tests.yml  trigger-docs-sync.yml  update-changelog.yml  update-version.yml  validate.yml  zizmor.yml
config/: configuration.yaml
custom_components/: __init__.py
custom_components/meraki_dashboard/: CLAUDE.md  __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  events.py  exceptions.py  icons.json  manifest.json  repairs.py  sensor.py  services.yaml  strings.json  switch.py  types.py  utils.py
custom_components/meraki_dashboard/config/: __init__.py  constants.py  hub_config.py  migration.py  schemas.py
custom_components/meraki_dashboard/data/: __init__.py  transformers.py
custom_components/meraki_dashboard/devices/: __init__.py  mr.py  ms.py  mt.py  mv.py  organization.py
custom_components/meraki_dashboard/entities/: __init__.py  base.py  factory.py
custom_components/meraki_dashboard/hubs/: CLAUDE.md  __init__.py  network.py  organization.py
custom_components/meraki_dashboard/meraki_vendor/: __init__.py  common.py  exceptions.py  response_handler.py  rest_session.py
custom_components/meraki_dashboard/meraki_vendor/aio/: __init__.py  rest_session.py
custom_components/meraki_dashboard/services/: __init__.py  event_service.py  mt_refresh_service.py
custom_components/meraki_dashboard/translations/: de.json  en.json  es.json  fr.json  translations.md
custom_components/meraki_dashboard/utils/: __init__.py  cache.py  device_info.py  error_handling.py  helpers.py  performance.py  rate_limiter.py  retry.py  sanitization.py
docs/: .meta.yml  404.md  Gemfile  README.md  _config.yml  api-optimization.md  api-reference.md  architecture.md  changelog.md  configuration.md  contributing.md  development.md  device-support.md  faq.md  getting-started.md  index.md  installation.md  logging-configuration.md  naming-conventions.md  robots.txt  supported-entities.md  troubleshooting.md  usage.md
docs/_devices/: mt20.md
docs/_layouts/: default.html  device.html
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  seo.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
scripts/: build-docs.sh  develop  generate_docs.py  lint  setup
spec/: README.md  oasdiff-ignore.txt
tests/: CLAUDE.md  README.md  TEST_COVERAGE_SUMMARY.md  __init__.py  conftest.py  test_binary_sensor.py  test_binary_sensor_extended.py  test_button.py  test_config_flow.py  test_config_flow_extended.py  test_config_migration_and_hub_config.py  test_config_schemas.py  test_const.py  test_coordinator.py  test_device_info_builder.py  test_device_model_display.py  test_devices_mr.py  test_devices_ms.py  test_devices_mv.py  test_devices_organization.py  test_diagnostics.py  test_error_handling_extended.py  test_event_service.py  test_events.py  test_exceptions.py  test_hubs_network.py  test_hubs_organization.py  test_hubs_simple.py  test_init.py  test_integration_refactored.py  test_migration_mt_only.py  test_mr_channel_utilization.py  test_mr_memory_usage.py  test_mt_air_quality_metrics.py  test_mt_connectivity_entities.py  test_mt_gateway_connections.py  test_mt_parsing_map.py  test_mt_real_data_example.py  test_mv_camera_hub.py  test_network_events.py  (+12 more)
tests/builders/: README.md  __init__.py  device_builder.py  hub_builder.py  integration_helper.py  presets.py  sensor_builder.py
tests/examples/: test_presets_example.py
tests/fixtures/: __init__.py  fixture_loader.py  meraki_api.py
tests/fixtures/api_responses/: alerts_overview.json  bluetooth_clients.json  camera_analytics_live.json  camera_analytics_recent.json  camera_sense_settings.json  channel_utilization.json  clients_overview.json  device_statuses.json  device_statuses_overview.json  licenses_overview.json  mr_devices.json  ms_devices.json  mt14_sensor_readings.json  mt15_sensor_readings.json  mt20_sensor_readings.json  mt40_sensor_readings.json  mt_devices.json  mt_sensor_readings.json  mt_sensor_readings_comprehensive.json  mv_devices.json  networks.json  organization.json  organizations.json  switch_ports_config_ms250.json  switch_ports_statuses_ms250.json  switch_power_modules.json  wireless_connection_stats.json  wireless_ethernet_statuses.json  wireless_ssids.json  wireless_status.json
tests/services/: test_mt_refresh_service.py
tools/apidrift/: __init__.py  __main__.py  reducer.py  report.py  scanner.py  spec.py
tools/apidrift/tests/: __init__.py  test_cli.py  test_reducer.py  test_report.py  test_scanner.py  test_spec.py
(+52 files in other folders)
